- update to what i now use with java 16 * small version bump * java 16 stuff (still works fine on 8/11) * converted some tabs to spaces * small re-order of thingies.